--- a/Myresume.html
+++ b/Myresume.html
@@ -124,7 +124,7 @@
                         <p>Location: Bhimavaram, India</p>
                     </div>
                     <div>
-                        <img src="C:\Users\palli\Downloads\tarak album.jpg" alt="photo">
+                        <img src="tarak_img.jpg" alt="photo">
                     </div>
                 </div>
 
